--- a/css/domtree.css
+++ b/css/domtree.css
@@ -156,7 +156,7 @@ animation: spin 18s infinite linear;
 
 
 .tree > *{
-	        transform-style: detachedd;
+	        transform-style: detached;
 }
 
 .tree * {
